--- a/dev/assets/scss/dragdrop.scss
+++ b/dev/assets/scss/dragdrop.scss
@@ -1,41 +1,30 @@
 // modal css
 .drag {
-     min-width: 450px;
-     min-height: 200px;
-     border: 2px dashed #a6a6a6;
-     border-radius: 12px;
-     padding: 15px;
-     font-family: inherit;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     flex-direction: column;
-     &.active {
-          border-color: red;
-     }
-     &__wrapper {
-          display: inline-block;
-     //     margin-top: 15px;
-          text-align: center;
-     }
-     &__label {
-          padding:15px;
-          display: inline-block;
+     &__area {          
+          padding:30px;
+          display: block;
           cursor: pointer;
-          border: 1px solid #535252;
-          border-radius: 4px;
-          background-color: #535252;
-          color: white;
+          border: 2px dashed #949494;
+          border-radius: 8px;
+          width: 100%;
+          text-align: center;          
+          color: inherit;
           &:hover {
-               background-color: #343434;
+               border-color: #0091b9; 
+               color: #0091b9;             
+          }
+          &.active {
+               border-color: #008f15;
+               color:#008f15 ;
           }
      }
+   
+   
      &__file {
           display: none;
      }
      &__result {
-          text-align: left;
-          padding: 15px;
+          text-align: left;     
           width: 100%;
      }
 
