--- a/dev/assets/scss/dragdrop.scss
+++ b/dev/assets/scss/dragdrop.scss
@@ -1,31 +1,88 @@
 // modal css
 .drag {
-     &__area {          
-          padding:30px;
+     display:block;
+     box-sizing: border-box;
+     .drop-zone {
+          position: relative;
+          min-width: 450px;
+          min-height: 150px;
           display: block;
-          cursor: pointer;
-          border: 2px dashed #949494;
-          border-radius: 8px;
-          width: 100%;
-          text-align: center;          
-          color: inherit;
-          &:hover {
-               border-color: #0091b9; 
-               color: #0091b9;             
+          border: 2px dashed #ccc; 
+          padding: 15px;
+          &__items {
+               margin: 0;
+               padding: 0;
+               display: inline-block;
+               list-style: none;
+               li {
+                    display: inline-block;
+                    margin-right: 10px;
+                    &:last-child {
+                         margin-right: 0;
+                    }
+               }
           }
           &.active {
-               border-color: #008f15;
-               color:#008f15 ;
+               border-color: #004aa4;
+          }         
+          &__wrapper {
+               text-align: center;
+               position: absolute;
+               display: inline-block;
+               top: 50%;
+               left: 50%;
+               transform: translate(-50%, -50%);
+               min-width: 75%;
           }
      }
-   
-   
-     &__file {
+     &__items {
+          padding: 15px;
+          border: 1px solid #ccc;
+          margin-bottom: 15px;
+          &.active {
+               border-color: #004aa4;
+          }
+      }
+      &__item {    
+          display: inline-block;
+          padding: 5px;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+          margin-right: 10px;
+          cursor: pointer;
+          position: relative;
+          &:last-child {
+              margin-right: 0;
+          }
+          &.dragging {
+              border: 1px solid red;
+          }  
+          
+          .item__clear {
+               position: absolute;
+               display: inline-block;
+               background-color: white;
+               box-shadow:1px 1px 0.5 #004aa4;
+               width: 15px;
+               height: 15px;               
+               border-radius: 4px;
+               cursor: pointer;
+               font-size: 18px;
+               text-align: center;
+               display: table;
+               top: -10px;
+               right: -10px;
+               border: 1px solid #ccc;
+          }
+  
+      }
+      
+      input {
           display: none;
      }
-     &__result {
-          text-align: left;     
-          width: 100%;
+     .hide {
+          display: none;
      }
-
+    
 }
+
