--- a/dev/assets/scss/dragdrop.scss
+++ b/dev/assets/scss/dragdrop.scss
@@ -2,6 +2,7 @@
 .drag {
      display:block;
      box-sizing: border-box;
+     margin-bottom: 15px;
      .drop-zone {
           position: relative;
           min-width: 450px;
