--- a/dev/assets/scss/element.scss
+++ b/dev/assets/scss/element.scss
@@ -117,3 +117,18 @@
           }
      }
 }
+#dragorder {
+     .drop-zone {
+          &__wrapper {
+               
+               position: relative;              
+               min-width: auto;
+               display: block;
+               text-align: left;
+               margin-bottom: 15px;
+               top:0;
+               left: 0;
+               transform: none;
+          }
+     }
+}
