--- a/templates/quotation/templateone.min.html
+++ b/templates/quotation/templateone.min.html
@@ -2,9 +2,9 @@
 <div class=header_>
 <div class=logo><img src=/wp-content/uploads/2019/12/logo-taoxanh.png class=company__logo></div>
 <div class=mycompany>
-<p><b>CTY TNHH THƯƠNG MẠI - DỊCH VỤ TÍN SINH PHÚC</b></p>
-<p><b>Địa chỉ:</b>Số 2 Đông Hồ, Phường 8, Quận Tân Bình, TP.HCM</p>
-<p><b>ĐT:</b>0987596879 -<b>email:</b>tien.lavan@tinsinhphuc.com</p>
+<p class=bold>CTY TNHH THƯƠNG MẠI - DỊCH VỤ TÍN SINH PHÚC</p>
+<p>Địa chỉ: <span class="bold">Số 2 Đông Hồ, Phường 8, Quận Tân Bình, TP.HCM</span>
+<p>ĐT: <span class="bold">0987596879</span> - email: <span class="bold">tien.lavan@tinsinhphuc.com</span></p>
 <img src=/wp-content/uploads/2019/08/moccoty.png class=stampLink>
 </div>
 </div>
